# playground

nalgebra_blas_test/: Cargo.toml
ndarray_blas_test/: Cargo.toml
ndarray_blas_test/benches/: gemv.rs
ndarray_blas_test/src/: main.rs
simd_test/: Cargo.toml
simd_test/benches/: vadd.rs
simd_test/src/: main.rs
trait_in_trait/: Cargo.toml
trait_in_trait/src/: main.rs
trait_refactor/: Cargo.toml
trait_refactor/src/: main.rs
